# rosetta

./: .gitmodules  CMakeLists.txt  package.xml  play_traj.py  setup.py
contracts/: robotera_q5.yaml
launch/: episode_recorder_launch.py  rosetta_client_launch.py  rosetta_hil_launch.py
params/: q5_action_smoother.yaml  rosetta_hil_manager.yaml
rosetta/: episode_recorder_node.py  port_bags.py  q5_action_smoother.py  q5_action_smoother_node.py  robotera_q5_encoders.py
rosetta/common/: decoders.py  encoders.py
scripts/: q5_action_smoother_node
tests/: test_q5_action_smoother.py
