<?xml version="1.0"?>
<package format="3">
  <name>rosetta</name>
  <version>0.1.0</version>
  <description>ROS 2–LeRobot bridge</description>
  <maintainer email="isaac.blankenau@gmail.com">Isaac Blankenau</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>rosetta_interfaces</build_depend>
  <build_depend>rclpy</build_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosetta_interfaces</exec_depend>
  <exec_depend>xbot_common_interfaces</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
